--- a/app/views/layouts/_menu_top.html.erb
+++ b/app/views/layouts/_menu_top.html.erb
@@ -1,45 +1,24 @@
-<div class="navbar-default sidebar" role="navigation">
-  <div class="sidebar-nav navbar-collapse">
-    <ul id="side-menu" class="nav in">
-      <li class="<%= 'active' if params[:controller] == 'home' %>">
-        <%= link_to home_path do %>
-          <i class="fa fa-dashboard fa-fw"></i>
-          Início
-        <% end %>
-      </li>
+<div class="row border-bottom">
+  <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+    <div class="navbar-header">
+      <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <ul class="nav navbar-top-links navbar-right">
       <li>
-        <%= link_to "#" do %>
-          <i class="fa fa-users fa-fw"></i>
-          Gerenciamento de Acesso
-          <span class="fa arrow"></span>
+        <% if current_user %>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+            <%= fa(:'sign-out') %>
+            Sair
+          <% end %>
+        <% else %>
+          <%= link_to new_user_session_path do %>
+            <%= fa(:'sign-in') %>
+            Login
+          <% end %>
         <% end %>
-        <ul class="nav nav-second-level">
-          <% if can?(:index, "Uo".constantize) %>
-            <li class="<%= 'active' if params[:controller] == 'uos' %>">
-              <%= link_to admin_uos_path do %>
-                <i class="fa fa-graduation-cap fa-fw"></i>
-                Uos
-              <% end %>
-            </li>
-          <% end %>
-          <% if can?(:index, "User".constantize) %>
-            <li class="<%= 'active' if params[:controller] == 'users' %>">
-              <%= link_to admin_users_path do %>
-                <i class="fa fa-user fa-fw"></i>
-                Usuários
-              <% end %>
-            </li>
-          <% end %>
-          <% if can?(:index, "Role".constantize) %>
-            <li class="<%= 'active' if params[:controller] == 'roles' %>">
-              <%= link_to admin_roles_path do %>
-                <i class="fa fa-cubes fa-fw"></i>
-                Papéis
-              <% end %>
-            </li>
-          <% end %>
-        </ul>
       </li>
     </ul>
-  </div>
+  </nav>
 </div>
