--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -4,43 +4,52 @@
 
 <%= render partial: "search_form" %>
 
-<table class="table table-bordered table-striped">
-  <thead>
-    <tr>
-      <th>Nome</th>
-      <th>Local</th>
-      <th>Permissões</th>
-      <th>Ações</th>
-    </tr>
-  </thead>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+      <div class="ibox-content">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Nome</th>
+                <th>Local</th>
+                <th>Permissões</th>
+                <th>Ações</th>
+              </tr>
+            </thead>
 
-  <tbody>
-    <% @roles.each do |role| %>
-      <tr>
-        <td><%= role.nome %></td>
-        <td><%= role.uo_dependent? ? checked : unchecked %></td>
-        <td>
-          <ul>
-            <% if role.permissions.blank? %>
-              <span>-</span>
-            <% else %>
-              <%= role.permissions.limit(3).collect{ |p| "<li>#{p}</li>" }.join("").html_safe %>
-            <% end %>
-            <% if !role.permissions.blank? && role.permissions.length > 3 %>
-              <span>...</span>
-            <% end %>
-          </ul>
-        </td>
-        <td>
-          <%= link_to 'Exibir', admin_role_path(role), class: 'btn btn-xs btn-default' %>
-          <% if current_user.super_admin? %>
-            <%= link_to 'Editar', edit_admin_role_path(role), class: 'btn btn-xs btn-default' %>
-            <%= link_to 'Deletar', admin_role_path(role), method: :delete, data: { confirm: 'Tem certeza?' }, class: 'btn btn-xs btn-danger' %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= paginate @roles %>
+            <tbody>
+              <% @roles.each do |role| %>
+                <tr>
+                  <td><%= role.nome %></td>
+                  <td><%= role.uo_dependent? ? checked : unchecked %></td>
+                  <td>
+                    <ul>
+                      <% if role.permissions.blank? %>
+                        <span>-</span>
+                      <% else %>
+                        <%= role.permissions.limit(3).collect{ |p| "<li>#{p}</li>" }.join("").html_safe %>
+                      <% end %>
+                      <% if !role.permissions.blank? && role.permissions.length > 3 %>
+                        <span>...</span>
+                      <% end %>
+                    </ul>
+                  </td>
+                  <td>
+                    <%= link_to 'Exibir', admin_role_path(role), class: 'btn btn-xs btn-default' %>
+                    <% if current_user.super_admin? %>
+                      <%= link_to 'Editar', edit_admin_role_path(role), class: 'btn btn-xs btn-default' %>
+                      <%= link_to 'Deletar', admin_role_path(role), method: :delete, data: { confirm: 'Tem certeza?' }, class: 'btn btn-xs btn-danger' %>
+                    <% end %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+          <%= paginate @roles %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
