--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,38 +4,45 @@
 
 <%= render partial: "search_form" %>
 
-<div class="table-responsive">
-  <table class="table table-bordered table-striped table-hover">
-    <thead>
-      <tr>
-        <th>Nome</th>
-        <th>Email</th>
-        <th>Papel</th>
-        <th>Uo</th>
-        <th>Ações</th>
-      </tr>
-    </thead>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+      <div class="ibox-content">
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Nome</th>
+                <th>Email</th>
+                <th>Papel</th>
+                <th>Uo</th>
+                <th>Ações</th>
+              </tr>
+            </thead>
 
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%=user.nome%></td>
-          <td><%=user.email%></td>
-          <td><%=user.role.nome%></td>
-          <td><%= user.uo.blank? ? "-" : user.uo.nome%></td>
-          <td>
-            <%= link_to 'Exibir', admin_user_path(user), class: 'btn btn-xs btn-default' %>
-            <% if user.can_edit?(current_user) %>
-              <%= link_to 'Editar', edit_admin_user_path(user), class: 'btn btn-xs btn-default' %>
-            <% end %>
-            <% if user.can_delete?(current_user) %>
-              <%= link_to 'Deletar', admin_user_path(user), method: :delete, data: { confirm: 'Tem certeza?' }, class: 'btn btn-xs btn-danger' %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+            <tbody>
+              <% @users.each do |user| %>
+                <tr>
+                  <td><%=user.nome%></td>
+                  <td><%=user.email%></td>
+                  <td><%=user.role.nome%></td>
+                  <td><%= user.uo.blank? ? "-" : user.uo.nome%></td>
+                  <td>
+                    <%= link_to 'Exibir', admin_user_path(user), class: 'btn btn-xs btn-default' %>
+                    <% if user.can_edit?(current_user) %>
+                      <%= link_to 'Editar', edit_admin_user_path(user), class: 'btn btn-xs btn-default' %>
+                    <% end %>
+                    <% if user.can_delete?(current_user) %>
+                      <%= link_to 'Deletar', admin_user_path(user), method: :delete, data: { confirm: 'Tem certeza?' }, class: 'btn btn-xs btn-danger' %>
+                    <% end %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+          <%= paginate @users %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-<%= paginate @users %>
