--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,12 @@
-<div class="page-header">
-  <h1>Novo Usuário</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+      <div class="ibox-title">
+        <h2>Novo Usuário</h2>
+      </div>
+      <div class="ibox-content">
+        <%= render :partial => 'form' %>
+      </div>
+    </div>
+  </div>
 </div>
-<%= render :partial => 'form' %>
