--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -10,6 +10,12 @@
   </div>
   <div class="row">
     <div class="form-group col-md-5">
+      <%= f.label :username, "Matrícula" %>
+      <%= f.text_field :username, class: 'form-control', title: tooltip_error_title(@user, :username), disabled: true %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col-md-5">
       <%= f.label :email %>
       <%= f.text_field :email, class: 'form-control', title: tooltip_error_title(@user, :email) %>
     </div>
@@ -19,29 +25,14 @@
       <%= f.label :telefone %>
       <%= f.text_field :telefone, class: 'form-control', title: tooltip_error_title(@user, :telefone), :"data-mask" => '(99) 9999-99999' %>
     </div>
-    </div>
-  <% display="" %>
+  </div>
   <% if !@user.new_record? %>
     <div class="row">
       <div class="form-group col-md-5">
-        <a id="show_password" href="#">Alterar senha</a>
+        <%= link_to "Alterar senha", "http://suap.ifce.edu.br/comum/solicitar_trocar_senha/", target: "_blank" %>
       </div>
     </div>
-    <% display="display:none;" %>
   <% end %>
-
-  <div id="password" class="row" style="<%=display%>">
-    <div class="form-group col-md-5">
-      <%= f.label :password, "Senha" %>
-      <%= f.password_field :password, class: 'form-control', title: tooltip_error_title(@user, :password) %>
-    </div>
-  </div>
-  <div id="password_confirmation" class="row" style="<%=display%>">
-    <div class="form-group col-md-5">
-      <%= f.label :password_confirmation, "Confirmação de Senha" %>
-      <%= f.password_field :password_confirmation, class: 'form-control', title: tooltip_error_title(@user, :password_confirmation) %>
-    </div>
-  </div>
   <div class="row">
     <div class="form-group col-md-5">
       <%= f.label :uo_id, class: 'control-label' %>
