--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,20 @@
-<h2>Change your password</h2>
+<div class="border-form-div">
+  <h4 class="text-center">Alterar sua senha</h4>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "m-t", role: "form" }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div><%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %></div>
+    <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+    <div class="form-group">
+      <%= f.password_field :password, placeholder: "Nova Senha", required: true, autofocus: true, class: "form-control" %>
+    </div>
 
-  <div><%= f.submit "Change my password" %></div>
-<% end %>
+    <div class="form-group">
+      <%= f.password_field :password_confirmation, placeholder: "Confirme sua Nova Senha", required: true, class: "form-control" %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <%= f.submit "Alterar senha", class: "btn btn-primary full-width" %>
+    <%= render "devise/shared/links" %>
+  <% end %>
+</div>
