--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,7 @@
 <div class="border-form-div">
   <h2>Esqueceu a senha?</h2>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= f.text_field :email, autofocus: true, placeholder: "Login", title: tooltip_error_title(resource, :email), class: 'form-control' %>
+    <%= f.text_field :username, autofocus: true, placeholder: "SIAPE", title: tooltip_error_title(resource, :username), class: 'form-control' %>
     <%= f.submit "Enviar instruções por email", class: 'btn btn-primary'  %>
   <% end %>
 
