--- a/app/views/layouts/_menu_left.html.erb
+++ b/app/views/layouts/_menu_left.html.erb
@@ -9,7 +9,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
             <span class="clear">
               <span class="block m-t-xs">
-                <strong class="font-bold"><%= current_user.nome %></strong>
+                <strong class="font-bold"><%= "#{current_user.nome} (#{current_user.username})" %></strong>
               </span>
               <span class="text-muted text-xs block">
                 <%= current_user.role.nome %>
