--- a/app/views/admin/users/_search_form.html.erb
+++ b/app/views/admin/users/_search_form.html.erb
@@ -14,6 +14,10 @@
       <%= s.search_field :nome_cont, :class => "form-control" %>
     </div>
     <div class="form-group margin-right-5">
+      <%= s.label :username_cont, "Matrícula/Usuário" %>
+      <%= s.search_field :username_cont, :class => "form-control" %>
+    </div>
+    <div class="form-group margin-right-5">
       <%= s.label :email_cont, "Email" %>
       <%= s.search_field :email_cont, :class => "form-control" %>
     </div>
