--- a/app/views/admin/roles/show.html.erb
+++ b/app/views/admin/roles/show.html.erb
@@ -1,31 +1,38 @@
-<div class="page-header">
-  <h1>Exibir Papel</h1>
-</div>
+<<div class="row">
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+      <div class="ibox-title">
+        <h2>Exibir Papel</h2>
+      </div>
+      <div class="ibox-content">
+        <div class="row">
+          <dl class="dl-horizontal">
+            <dt><strong>Nome:</strong></dt>
+            <dd><%= @role.nome %></dd>
+            <dt><strong>Apenas local:</strong></dt>
+            <dd><%= @role.uo_dependent? ? "Sim" : "Não" %></dd>
+            <dt><strong>Permissões:</strong></dt>
+            <dd>
+              <ul>
+                <%= @role.permissions.collect{ |p| "<li>#{p}</li>" }.join("").html_safe %>
+              </ul>
+            </dd>
+          </dl>
+        </div>
 
-<div class="row">
-  <dl class="dl-horizontal">
-    <dt><strong>Nome:</strong></dt>
-    <dd><%= @role.nome %></dd>
-    <dt><strong>Apenas local:</strong></dt>
-    <dd><%= @role.uo_dependent? ? "Sim" : "Não" %></dd>
-    <dt><strong>Permissões:</strong></dt>
-    <dd>
-      <ul>
-        <%= @role.permissions.collect{ |p| "<li>#{p}</li>" }.join("").html_safe %>
-      </ul>
-    </dd>
-  </dl>
-</div>
-
-<div class="form-actions">
-  <%= link_to "Voltar", admin_roles_path, :class => 'btn btn-default'  %>
-  <% if @role.nome != "SuperAdmin" && @role.nome != "Admin" && @role.nome != "Aluno" %>
-    <%= link_to "Editar",
-                edit_admin_role_path(@role), :class => 'btn btn-default' %>
-    <%= link_to "Deletar",
-                admin_role_path(@role),
-                :method => 'delete',
-                :data => { :confirm => 'Tem certeza?' },
-                :class => 'btn btn-danger' %>
-  <% end %>
+        <div class="form-actions">
+          <%= link_to "Voltar", admin_roles_path, :class => 'btn btn-default'  %>
+          <% if @role.nome != "SuperAdmin" && @role.nome != "Admin" && @role.nome != "Aluno" %>
+            <%= link_to "Editar",
+                        edit_admin_role_path(@role), :class => 'btn btn-default' %>
+            <%= link_to "Deletar",
+                        admin_role_path(@role),
+                        :method => 'delete',
+                        :data => { :confirm => 'Tem certeza?' },
+                        :class => 'btn btn-danger' %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
