--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= csrf_meta_tags %>
   </head>
   <% if !current_user.blank? %>
-    <body style="background-color: background-color: #293846;">
+    <body style="background-color: #293846;">
       <div id="wrapper">
         <%= render "layouts/menu_left" %>
         <div id="page-wrapper" class="gray-bg dashbard-1" style="min-height: 100vh;">
