--- a/app/views/admin/roles/_form.html.erb
+++ b/app/views/admin/roles/_form.html.erb
@@ -1,41 +1,28 @@
-<%= form_for([:admin, @role], html: { role: "form" }) do |f| %>
-  <%= error_message @role %>
-  <%= display_nested_errors @role %>
+<div class="row">
+  <div class="col-sm-8">
+    <%= simple_form_for([:admin, @role], wrapper: :vertical_form, html: { class: "form-vertical", role: "form" }) do |f| %>
+      <%= f.input :nome, class: 'form-control', title: tooltip_error_title(@role, :nome) %>
+      <%= f.input :uo_dependent, label: "Apenas local?", wrapper: :vertical_boolean, title: tooltip_error_title(@role, :uo_dependent) %>
 
-  <div class="row">
-    <div class="form-group col-md-5">
-      <%= f.label :nome %>
-      <%= f.text_field :nome, class: 'form-control', title: tooltip_error_title(@role, :nome) %>
-    </div>
+      <div>
+        <%= f.label :permissions, "Permissões", class: 'control-label' %><br />
+        <%= select_tag('available_roles', options_for_select(@permissions), { style: "width: 350px; height: 300px;", multiple: true, size: 15, id: "permissions_left" }) %>
+
+        <%= select_tag('selected_attributes', options_for_select(@role_permissions), { style: "width: 350px; height: 300px;", multiple: true, size: 15, id: "permissions_right" }) %>
+
+        <% @role_permissions.each do |permission_id| %>
+          <%= hidden_field_tag "permissions[]", permission_id[1], { id: "permission_#{permission_id[1]}" } %>
+        <% end %>
+      </div>
+      <div class="form-group" style="width: 700px; margin-top: 5px;">
+        <%= link_to fa(:"chevron-right"), "#", { id: "add_multiple", :"data-left_select" => "permissions_left", :"data-right_select" => "permissions_right", class: "btn btn-default btn-sm"} %>
+        <%= link_to fa(:"chevron-left"), "#", { id: "remove_multiple", :"data-left_select" => "permissions_left", :"data-right_select" => "permissions_right", style: "margin-right: -4px;", class: "btn btn-default btn-sm pull-right" } %>
+      </div>
+
+      <div class="form-actions m-t">
+        <%= f.submit "Salvar", :class => 'btn btn-primary' %>
+        <%= link_to "Cancelar", admin_roles_path, :class => 'btn btn-default' %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="row">
-    <div class="form-group col-md-5">
-      <label class="label-block">Apenas local?</label><br />
-      <%= f.check_box :uo_dependent, title: tooltip_error_title(@role, :uo_dependent) %>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="form-group col-xs-12">
-      <%= f.label :permissions, "Permissões", class: 'control-label' %><br />
-      <%= select_tag('available_roles', options_for_select(@permissions), { style: "width: 250px; height: 300px;", multiple: true, size: 15, id: "permissions_left" }) %>
-
-      <%= select_tag('selected_attributes', options_for_select(@role_permissions), { style: "width: 250px; height: 300px;", multiple: true, size: 15, id: "permissions_right" }) %>
-
-      <% @role_permissions.each do |permission_id| %>
-        <%= hidden_field_tag "permissions[]", permission_id[1], { id: "permission_#{permission_id[1]}" } %>
-      <% end %>
-    </div>
-  </div>
-
-  <div class="form-group" style="width: 500px;">
-    <%= link_to fa(:"chevron-right"), "#", { id: "add_multiple", :"data-left_select" => "permissions_left", :"data-right_select" => "permissions_right", style: "margin-top: -12px;", class: "btn btn-default btn-sm"} %>
-    <%= link_to fa(:"chevron-left"), "#", { id: "remove_multiple", :"data-left_select" => "permissions_left", :"data-right_select" => "permissions_right", style: "margin-top: -12px; margin-right: -4px;", class: "btn btn-default btn-sm pull-right" } %>
-  </div>
-
-  <div class="form-actions" style="padding-top: 40px;">
-    <%= f.submit "Salvar", :class => 'btn btn-primary' %>
-    <%= link_to "Cancelar", admin_roles_path, :class => 'btn btn-default' %>
-  </div>
-<% end %>
+</div>
