--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,33 +1,42 @@
-<div class="page-header">
-  <h1>Exibir Usuário</h1>
-</div>
-
 <div class="row">
-  <dl class="dl-horizontal">
-    <dt><strong>Nome:</strong></dt>
-    <dd><%= @user.nome %></dd>
-    <dt><strong>Email:</strong></dt>
-    <dd><%= @user.email %></dd>
-    <dt><strong>Telefone:</strong></dt>
-    <dd><%= @user.telefone %></dd>
-    <dt><strong>Role:</strong></dt>
-    <dd><%= @user.role.nome %></dd>
-    <dt><strong>Uo:</strong></dt>
-    <dd><%= @user.uo.blank? ? "-" : @user.uo.nome %></dd>
-  </dl>
-</div>
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+      <div class="ibox-title">
+        <h2>Exibir Usuário</h2>
+      </div>
+      <div class="ibox-content">
+        <div class="row">
+          <dl class="dl-horizontal">
+            <dt><strong>Nome:</strong></dt>
+            <dd><%= @user.nome %></dd>
+            <dt><strong>Email:</strong></dt>
+            <dd><%= @user.email %></dd>
+            <dt><strong>Telefone:</strong></dt>
+            <dd><%= @user.telefone %></dd>
+            <dt><strong>Role:</strong></dt>
+            <dd><%= @user.role.nome %></dd>
+            <dt><strong>Uo:</strong></dt>
+            <dd><%= @user.uo.blank? ? "-" : @user.uo.nome %></dd>
+            <dt><strong>Tipo de autenticação:</strong></dt>
+            <dd><%= ad_user_label(@user) %></dd>
+          </dl>
+        </div>
 
-<div class="form-actions">
-  <%= link_to "Voltar", admin_users_path, :class => 'btn btn-default'  %>
-  <% if @user.can_edit?(current_user) %>
-    <%= link_to "Editar",
-              edit_admin_user_path(@user), :class => 'btn btn-default' %>
-  <% end %>
-  <% if @user.can_delete?(current_user) %>
-    <%= link_to "Deletar",
-              admin_user_path(@user),
-              :method => 'delete',
-              :data => { :confirm => 'Tem certeza?' },
-              :class => 'btn btn-danger' %>
-  <% end %>
+        <div class="form-actions">
+          <%= link_to "Voltar", admin_users_path, :class => 'btn btn-default'  %>
+          <% if @user.can_edit?(current_user) %>
+            <%= link_to "Editar",
+                      edit_admin_user_path(@user), :class => 'btn btn-default' %>
+          <% end %>
+          <% if @user.can_delete?(current_user) %>
+            <%= link_to "Deletar",
+                      admin_user_path(@user),
+                      :method => 'delete',
+                      :data => { :confirm => 'Tem certeza?' },
+                      :class => 'btn btn-danger' %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
