--- a/app/views/layouts/_menu_left.html.erb
+++ b/app/views/layouts/_menu_left.html.erb
@@ -9,7 +9,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
             <span class="clear">
               <span class="block m-t-xs">
-                <strong class="font-bold"><%= "#{current_user.nome} (#{current_user.username})" %></strong>
+                <strong class="font-bold"><%= "#{current_user.nome}" %></strong>
               </span>
               <span class="text-muted text-xs block">
                 <%= current_user.role.nome %>
@@ -21,7 +21,8 @@
             <li>
               <%= link_to edit_admin_user_path(current_user) do %>
                 <%= fa(:user) %>
-                Perfil
+                <strong><%=current_user.username%></strong><br/>
+                <span style="margin-left: 10px;">Editar Perfil</span>
               <% end %>
             </li>
             <li class="divider"></li>
