--- a/app/views/layouts/update_ajax_select.js.erb
+++ b/app/views/layouts/update_ajax_select.js.erb
@@ -1,2 +1,3 @@
 $("<%=@target_id%>").html("<%=escape_javascript(options_for_select(@objects))%>");
 $("<%=@target_id%>").change();
+$("<%=@target_id%>").trigger("chosen:updated");
