--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -6,6 +6,6 @@
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <div style="margin-top: 10px;">
-    <%= link_to "Esqueceu sua senha?", "http://suap.ifce.edu.br/comum/solicitar_trocar_senha/", target: "_blank" %><br />
+    <%= link_to "Esqueceu sua senha?", new_password_path(resource_name) %><br />
   </div>
 <% end -%>
