--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,6 +1,6 @@
 <%= paginator.render do -%>
-  <div class="row">
-    <div class="col-xs-12">
+  <div class="row" style="margin-left: 0; margin-right: 0;">
+    <div class="col-xs-12" style="padding-left: 0; padding-right: 0;">
       <ul class="pagination">
         <%= first_page_tag unless current_page.first? %>
         <%= prev_page_tag unless current_page.first? %>
