Corrigindo alguns redirecionamentos e bugs

--- a/app/views/layouts/_menu_items.html.erb
+++ b/app/views/layouts/_menu_items.html.erb
@@ -7,36 +7,38 @@
 <%
  acessos_selected = params[:controller] == 'admin/uos' || params[:controller] == 'admin/users' || params[:controller] == 'admin/roles'
 %>
-<li class="<%= 'active' if acessos_selected %>">
-  <%= link_to "#" do %>
-    <i class="fa fa-users fa-fw"></i>
-    <span class="nav-label">Acessos</span>
-    <span class="fa arrow"></span>
-  <% end %>
-  <ul class="nav nav-second-level">
-    <% if can?(:index, Uo) %>
-      <li class="<%= 'active' if params[:controller] == 'admin/uos' %>">
-        <%= link_to admin_uos_path do %>
-          <i class="fa fa-graduation-cap fa-fw"></i>
-          Uos
-        <% end %>
-      </li>
+<% if can?(:index, Uo) || can?(:index, User) || can?(:index, Role) %>
+  <li class="<%= 'active' if acessos_selected %>">
+    <%= link_to "#" do %>
+      <i class="fa fa-users fa-fw"></i>
+      <span class="nav-label">Acessos</span>
+      <span class="fa arrow"></span>
     <% end %>
-    <% if can?(:index, User) %>
-      <li class="<%= 'active' if params[:controller] == 'admin/users' %>">
-        <%= link_to admin_users_path do %>
-          <i class="fa fa-user fa-fw"></i>
-          Usuários
-        <% end %>
-      </li>
-    <% end %>
-    <% if can?(:index, Role) %>
-      <li class="<%= 'active' if params[:controller] == 'admin/roles' %>">
-        <%= link_to admin_roles_path do %>
-          <i class="fa fa-cubes fa-fw"></i>
-          Papéis
-        <% end %>
-      </li>
-    <% end %>
-  </ul>
-</li>
+    <ul class="nav nav-second-level">
+      <% if can?(:index, Uo) %>
+        <li class="<%= 'active' if params[:controller] == 'admin/uos' %>">
+          <%= link_to admin_uos_path do %>
+            <i class="fa fa-graduation-cap fa-fw"></i>
+            Uos
+          <% end %>
+        </li>
+      <% end %>
+      <% if can?(:index, User) %>
+        <li class="<%= 'active' if params[:controller] == 'admin/users' %>">
+          <%= link_to admin_users_path do %>
+            <i class="fa fa-user fa-fw"></i>
+            Usuários
+          <% end %>
+        </li>
+      <% end %>
+      <% if can?(:index, Role) %>
+        <li class="<%= 'active' if params[:controller] == 'admin/roles' %>">
+          <%= link_to admin_roles_path do %>
+            <i class="fa fa-cubes fa-fw"></i>
+            Papéis
+          <% end %>
+        </li>
+      <% end %>
+    </ul>
+  </li>
+<% end %>
