--- a/app/views/admin/roles/show.html.erb
+++ b/app/views/admin/roles/show.html.erb
@@ -1,4 +1,4 @@
-<<div class="row">
+<div class="row">
   <div class="col-lg-12">
     <div class="ibox float-e-margins">
       <div class="ibox-title">
