--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<h1>Bem Vindo ao Template para desenvolvimento de Sistemas com base em Rails 5</h1>
+<h1>Bem Vindo ao Sistema do EJC - Aparecida</h1>
